--- a/Quality/Quality/Areas/SampleRFT/Views/InspBySPQuery/_Tab1_Layout.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspBySPQuery/_Tab1_Layout.cshtml
@@ -59,7 +59,7 @@
     <div style="display:inline-block;width:40%">
         <table class="checkListClass">
             <tr>
-                <td colspan="2" style="font-size: 2em;font-weight:bold">Fabeic Artwork Check List</td>
+                <td colspan="2" style="font-size: 2em;font-weight:bold">Fabric Artwork Check List</td>
             </tr>
             <tr>
                 <td style="width:3vw">
