--- a/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/AddDefect.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/AddDefect.cshtml
@@ -43,6 +43,14 @@
         .ColTitle{
             text-align:center;
         }
+        .Remove-icon {
+            width: 1vh;
+            height: 1vh;
+            background-size: cover;
+            background-repeat: no-repeat;
+            display: inline-block;
+            background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAU0lEQVR4nO3QQQ3DQADEwE1V+CnmC4v6kRkEljcAAAAAAICXuM521xGl62ynjih96oCaAXVAzYA6oGZAHVAzoA6oGVAH1L7bfnUEAAAAAAAAf/AAgJAEMzJ8aocAAAAASUVORK5CYII=');
+        }
     </style>
 }
 <div class="DownWhiteBackgrond">
@@ -87,7 +95,7 @@
 
 
 
-        <div style="width:18%;height:90%;">
+        <div id="DefectAreaLeft" style="width:18%;height:90%;">
             <div style="width: 100%; height: 5%; background-color: navajowhite; text-align: center; vertical-align: middle; border: 1px solid black;">
                 <h1 style="font-size: 2vh; font-weight: 900;padding-top:0.8vh; ">
                     Area-1
@@ -105,7 +113,9 @@
             <h1 style="color:white"><span id="AreaSelectedQty" style="color:yellow">0</span> Areas have been selected</h1>
             <br />
             <br />
-            <button id="btnAreaSave" onclick="AreaSave()" style="width: 100%; height: 3vh; background-color: lightblue;color:blue">Save</button>
+            <button id="btnAreaSave" onclick="AreaSave()" style="width: 100%; height: 3vh; background-color: lightblue;color:blue;margin:0;">Save</button>
+            <br />
+            <br />
         </div>
 
         <div style="width:2%;height:90%;border:0">
@@ -347,6 +357,7 @@
             $("#AreaQty").text($(`input[name='${qtyObjName}.Qty']`).val());
             MaxRejectQty = $(`input[name='${qtyObjName}.Qty']`).val();
 
+            $('.AreaSelected').remove();
 
             // 抓取已選取的AreaCode
             if (AreaCodes == '') {
@@ -364,6 +375,16 @@
                     $(`div[value='${area}']`).attr('chioced', 'true').css('background-color', '#16caa9');
 
                     $(`#Area${type}`).click();
+
+                    // 左下角選列表加入
+                    $("#DefectAreaLeft").append(`
+            <div class="AreaSelected" onClick="AreaSelected_Click(this)" style="width: 100%; height: 5%; line-height: 3vh; background-color: #96f277; border: 1px solid black; text-align: center;display:flex;align-items:center;">
+                <h1>&nbsp;&nbsp;&nbsp;</h1>
+                <i class="Remove-icon"></i>
+                <h1>&nbsp;&nbsp;&nbsp;</h1>
+                <p>${area}</p>
+            </div>
+    `);
                 });
             }
         }
@@ -392,6 +413,7 @@
         function AreaClick(obj) {
             var isSelected = $(obj).attr('chioced');
             var selectDatas = $('.AreeItem[chioced="true"]');
+            var selectVal = $(obj).attr('value');
 
             if (isSelected == 'false') {
                 if (selectDatas.length >= MaxRejectQty) {
@@ -401,12 +423,34 @@
 
                 $(obj).attr('chioced', 'true');
                 $(obj).css('background-color', '#16caa9');
+
+
+                // 左下角選列表加入
+                $("#DefectAreaLeft").append(`
+            <div class="AreaSelected" onClick="AreaSelected_Click(this)" style="width: 100%; height: 5%; line-height: 3vh; background-color: #96f277; border: 1px solid black; text-align: center;display:flex;align-items:center;">
+                <h1>&nbsp;&nbsp;&nbsp;</h1>
+                <i class="Remove-icon"></i>
+                <h1>&nbsp;&nbsp;&nbsp;</h1>
+                <p>${selectVal}</p>
+            </div>
+    `);
             }
             else {
                 $("#AreaSelectedQty").text(selectDatas.length - 1);
                 $(obj).attr('chioced', 'false');
                 $(obj).css('background-color', 'lightpink');
+
+                $('.AreaSelected').find(`p:contains("${selectVal}")`).parent().remove();
             }
+        }
+
+        function AreaSelected_Click(obj) {
+            debugger
+            // 取得點選要移除的的Area
+            var removeVal = $(obj).find('p').text();
+            var areaDiv = $('.AreeItem').find(`h4:contains("${removeVal}")`).parent();
+            AreaClick(areaDiv);
+            $(obj).remove();
         }
 
         function AreaSave() {
