--- a/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/CheckList.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/CheckList.cshtml
@@ -101,6 +101,7 @@
                 ['CheckHandfeel', 'Handfeel', @Model.CheckHandfeel],
                 ['CheckAppearance', 'Appearance',@Model.CheckAppearance],
                 ['CheckPrintEmbDecorations', 'Print/Emb Decorations',@Model.CheckPrintEmbDecorations],
+                ['CheckHT', 'HT', @Model.CheckHT]
             ]
         ]);
         adata.push([null, 'Label', false,
