--- a/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/Measurement.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/Measurement.cshtml
@@ -679,6 +679,7 @@
         var dropProductType = document.getElementById("dropProductType");
 
         if (dropArticle.value == "" || dropSize.value == "" || dropProductType.value == "") {
+            $(".MeasurementTable").hide();
             return;
         }
 
