--- a/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspectionBySP/Index.cshtml
@@ -68,18 +68,24 @@
 
             <table class="center" style="width: 100%;  height: 3vh ">
                 <tr>
+                    <td style="width: 8%; vertical-align: bottom;" align="right">
+
+                        <button type="submit" style="border: 0; background: transparent; min-width:3vh">
+                            <img src="~/Image/Icon/Query.png" width="40" height="40" alt="submit" />
+                        </button>
+                    </td>
                     <td style="width:5%" align="right">
                         <p class="searchFont">SP#</p>
                     </td>
                     <td style="width:4%" align="center">
                         @Html.TextBoxFor(o => o.OrderID, string.Empty, new { style = "border-color:black;" })
                     </td>
-                    <td style="width:5%" align="right">
-                        <p class="searchFont ">PO#</p>
-                    </td>
-                    <td style="width:4%" align="center">
-                        @Html.TextBoxFor(o => o.CustPONo, string.Empty, new { style = "border-color:black;" })
-                    </td>
+                    @*<td style="width:5%" align="right">
+            <p class="searchFont ">PO#</p>
+        </td>
+        <td style="width:4%" align="center">
+            @Html.TextBoxFor(o => o.CustPONo, string.Empty, new { style = "border-color:black;" })
+        </td>*@
                     <td style="width:5%" align="right">
                         <p class="searchFont">Style#</p>
                     </td>
@@ -93,12 +99,6 @@
                     </td>
                     <td style="width:4%" align="center">
                         @Html.TextBoxFor(o => o.SeasonID, string.Empty, new { style = "border-color:black;" })
-                    </td>
-                    <td style="width: 8%; vertical-align: bottom;" align="right">
-
-                        <button type="submit" style="border: 0; background: transparent; min-width:3vh">
-                            <img src="~/Image/Icon/Query.png" width="40" height="40" alt="submit" />
-                        </button>
                     </td>
                 </tr>
             </table>
