--- a/Quality/Quality/Areas/SampleRFT/Views/PicturesDummy/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/PicturesDummy/Index.cshtml
@@ -117,7 +117,8 @@
                                 <th>Article</th>
                                 <th>Size</th>
                                 <th>Front View</th>
-                                <th>Side View</th>
+                                <th>Left View</th>
+                                <th>Right View</th>
                                 <th>Back View</th>
                                 <th>   </th>
                             </tr>
@@ -146,9 +147,21 @@
                                         }
                                     </td>
                                     <td>
-                                        @if (item.Side != null)
+                                        @if (item.Left != null)
                                         {
-                                            var base64 = Convert.ToBase64String(item.Side);
+                                            var base64 = Convert.ToBase64String(item.Left);
+                                            var imgSrc = String.Format("data:image/png;base64,{0}", base64);
+                                            <div class="zoom-gallery">
+                                                <a href="@imgSrc" data-source="" style="width:640px;height:480px;">
+                                                    <img width="30" src="@imgSrc" />
+                                                </a>
+                                            </div>
+                                        }
+                                    </td>
+                                    <td>
+                                        @if (item.Right != null)
+                                        {
+                                            var base64 = Convert.ToBase64String(item.Right);
                                             var imgSrc = String.Format("data:image/png;base64,{0}", base64);
                                             <div class="zoom-gallery">
                                                 <a href="@imgSrc" data-source="" style="width:640px;height:480px;">
@@ -170,9 +183,9 @@
                                         }
                                     </td>
                                     <td>
-                                        @if (item.Front != null || item.Side != null || item.Back != null)
+                                        @if (item.Front != null || item.Left != null || item.Right != null || item.Back != null)
                                         {
-                                            
+
                                             <a href="@Url.Action("DownloadPictures", ViewContext.RouteData.GetRequiredString("Controller")
                                                     , new { 
                                                         OrderID = Model.OrderID,
