--- a/Quality/Quality/Areas/SampleRFT/Views/InspBySPQuery/Detail.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspBySPQuery/Detail.cshtml
@@ -192,15 +192,15 @@
                     </tr>
                     <tr>
                         <td>AQL Plan</td>
-                        <td class="valueColor">@Model.Setting.AQLPlan</td>
+                        <td class="valueColor" style="padding-left:10px;">@Model.Setting.AQLPlan</td>
 
                         <td style="padding-left:10px;">Sample Plan Qty</td>
                         <td class="valueColor" style="padding-left:10px;">@Model.sampleRFTInspection.SampleSize</td>
 
-                        <td>Accepted</td>
-                        <td class="valueColor">@Model.sampleRFTInspection.AcceptQty</td>
+                        <td style="padding-left:10px;">Accepted</td>
+                        <td class="valueColor" style="padding-left:10px;">@Model.sampleRFTInspection.AcceptQty</td>
 
-                        <td>Rejected</td>
+                        <td style="padding-left:10px;">Rejected</td>
                         <td class="valueColor" style="padding-left:10px;">@(Model.sampleRFTInspection.AcceptQty+1)</td>
                     </tr>
                 </table>
