--- a/Quality/Quality/Areas/SampleRFT/Views/InspBySPQuery/_Tab1_Layout.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/InspBySPQuery/_Tab1_Layout.cshtml
@@ -90,7 +90,15 @@
                     @Html.CheckBoxFor(o => o.sampleRFTInspection.CheckPrintEmbDecorations, new { @disabled = "disabled", @class = "checkboxInput" })
                 </td>
                 <td>
-                    <div><label class="checkboxlabel">Print/ Emb Decorations</label></div>
+                    <div><label class="checkboxlabel">Print/Emb Decorations</label></div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    @Html.CheckBoxFor(o => o.sampleRFTInspection.CheckHT, new { @disabled = "disabled", @class = "checkboxInput" })
+                </td>
+                <td>
+                    <div><label class="checkboxlabel">HT</label></div>
                 </td>
             </tr>
         </table>
